[B] Minor UI Bugfixes (#1006) (#1005) (#1003) (#1004) (#847)
* Add z-index class to raise overlay div

* [B] Fix landing page button border radius (#1005)

* remove line

* [B] Fix collection/datasource description color (#1003)

* [B] Remove unnecessary flexbox so button is not stretched

--- a/app/styles/custom/utilities/_utilities.markdown-text.scss
+++ b/app/styles/custom/utilities/_utilities.markdown-text.scss
@@ -13,7 +13,7 @@
 
   // Color
   h1, h2, h3, h4, h5, h6, pre { @extend .fc-primary; }
-  ul, a, strong { @extend .fc-secondary; }
+  ul, a, strong, p { @extend .fc-secondary; }
 
   // State
   a:hover { @extend .fc-primary; }
